load("@rules_cc//cc:defs.bzl", "cc_library")

#------------------------------------------
# Rules for Light Weight LRU Cache library
#------------------------------------------

cc_library(
    name = "lru_cache",
    deps = [
        "//src:cache_lib",
    ],
    visibility = ["//visibility:public"],
)
